# bib-enhancer

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT_GUIDELINES.md  README.md  pyproject.toml
.cargo/: config.toml
.claude/commands/: extract-text.md  extract-web.md
.github/workflows/: lint-test-build.yml
bib_enhancer/adapters/crossref/: crossref_client.py
bib_enhancer/logic/: enums.py  functions.py  models.py
docs/: architecture.md  crossref_flow_analysis.md  fuzzy_matcher.md  general-context.md  raw_text_usage.md  raw_web_text_usage.md  unstructured_data.md
docs/todo/: bib-renderer.md  weight_optimization.md
examples/: extract_osborn.py  osborn_refs.txt  osborn_refs_bib_only.txt  parse_osborn.py  parse_pdf_bibliography.py  raw_text_example.py  raw_web_text_example.py
philoch_bib_enhancer/: _rust.pyi
philoch_bib_enhancer/adapters/beebebib/: __init__.py  beebebib_gateway.py
philoch_bib_enhancer/adapters/blumbib/: blumbib_models.py
philoch_bib_enhancer/adapters/crossref/: crossref_bibitem_gateway.py  crossref_client.py  crossref_converter.py  crossref_models.py
philoch_bib_enhancer/adapters/llm/: __init__.py  claude_llm_service.py  openai_llm_service.py
philoch_bib_enhancer/adapters/raw_text/: README.md  __init__.py  raw_text_converter.py  raw_text_gateway.py  raw_text_models.py
philoch_bib_enhancer/adapters/raw_text/extractors/: README.md  extract_bibtex.py  extract_docx_bibliography.py  extract_masters_587.py  extract_pdf_text.py  extract_travaux_master_61.py  folia_unifr_philosophy.py  registry.json  unifr_master_cat.py  unil_memoires.py
philoch_bib_enhancer/adapters/raw_web_text/: README.md  __init__.py  raw_web_text_converter.py  raw_web_text_gateway.py  raw_web_text_models.py  web_scraper.py
philoch_bib_enhancer/adapters/raw_web_text/extractors/: README.md  extract_masters_587.py  extract_travaux_master_61.py  folia_unifr_philosophy.py  registry.json  unifr_master_cat.py  unil_memoires.py
philoch_bib_enhancer/cli/: __init__.py  crossref_journal_scraping_cli.py  fuzzy_matcher_cli.py  manual_raw_text_to_csv.py  manual_raw_web_text_to_csv.py  raw_text_scraping_cli.py  raw_web_text_scraping_cli.py  scrape_journal_cli.py
philoch_bib_enhancer/domain/: __init__.py  bibkey_matching.py  parsing_result.py
philoch_bib_enhancer/fuzzy_matching/: __init__.py  comparator.py  matcher.py  models.py
philoch_bib_enhancer/logic/: functions.py  models.py
philoch_bib_enhancer/ports/: bibitem_by_doi.py  journal_scraping.py  llm_service.py
philoch_bib_enhancer/procedures/: journal_scraping.py
prototypes/crossref/: crossref_bibitem_gateway.ipynb
scripts/: generate_philstudies_benchmark.py
src/: lib.rs
tests/: .env.test.example  conftest.py
tests/adapters/crossref/: example_journals_response.py  test_crossref_parsing.py
tests/cli/: test_fuzzy_matcher_cli.py
tests/fuzzy_matching/: conftest.py  test_benchmark.py  test_comparator.py  test_matcher.py  test_models.py  test_rust_parity.py
tests/fuzzy_matching/benchmark_data/: philstudies_bibliography.csv  philstudies_ground_truth.json
tests/logic/: test_functions.py
