[project]
name = "philoch-bib-enhancer"
version = "0.1.0"
description = "Scripts to enhance Philosophie.ch's Bibliography"
authors = [
    {name = "Luis Alejandro Bordo García", email = "luis.bordo@philosophie.ch"}
]
maintainers = [
    {name = "Luis Alejandro Bordo García", email = "tech@philosophie.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aletk = "^0.1.6"
philoch-bib-sdk = "^0.4.2"
attrs = "^25.3.0"
pydantic = "^2.10.6"
polars = "^1.26.0"
habanero = "^2.2.0"
libgen-api = "^1.0.1"
tenacity = "^9.0.0"
requests = "^2.32.3"
fastexcel = "^0.14.0"
pymupdf = "^1.26.7"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
jupyter = "^1.1.1"
pytest-env = "^1.1.5"
autoflake = "^2.3.1"
python-dotenv = "^1.1.1"

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ras -m 'not external'"
markers = [
    "external: mark tests that require external API calls",
]
testpaths = ["tests"]
pythonpath = ["."]
env = [
    "TEST_ENV_FILE=tests/.env.test",
]

[[tool.mypy.overrides]]
module = [
    "habanero",
    "anthropic",
    "openai",
    "requests",
    "pymupdf",
    "PyPDF2",
    "pypdf",
    "docx",
    "bs4",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
skip-string-normalization = true
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.poetry.scripts]
format = "scripts.format:main"
scrape-journal = "philoch_bib_enhancer.cli.scrape_journal_cli:cli"