[project]
name = "philoch-bib-enhancer"
version = "0.2.1"
description = "Scripts to enhance Philosophie.ch's Bibliography"
authors = [
    {name = "Luis Alejandro Bordo García", email = "luis.bordo@philosophie.ch"}
]
maintainers = [
    {name = "Luis Alejandro Bordo García", email = "tech@philosophie.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "philoch_bib_enhancer._rust"

[tool.poetry.dependencies]
aletk = "^0.1.8"
philoch-bib-sdk = "^0.6.1"
attrs = "^25.4.0"
pydantic = "^2.12.5"
polars = "^1.38.0"
habanero = "^2.2.0"
libgen-api = "^1.0.1"
tenacity = "^9.0.0"
requests = "^2.32.3"
fastexcel = "^0.14.0"
pymupdf = "^1.26.7"
pypdf2 = "^3.0.1"
cytoolz = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.19.1"
black = {extras = ["jupyter"], version = "^25.1.0"}
jupyter = "^1.1.1"
pytest-env = "^1.1.5"
autoflake = "^2.3.1"
python-dotenv = "^1.1.1"
maturin = "^1.8.0"

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
warn_unreachable = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_any_decorated = true
enable_error_code = [
    "possibly-undefined",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "exhaustive-match",
]
mypy_path = "."
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ras -m 'not external and not slow'"
markers = [
    "external: mark tests that require external API calls",
    "slow: mark tests as slow (deselected by default)",
]
testpaths = ["tests"]
pythonpath = ["."]
env = [
    "TEST_ENV_FILE=tests/.env.test",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "habanero",
    "anthropic",
    "openai",
    "requests",
    "pymupdf",
    "PyPDF2",
    "pypdf",
    "docx",
    "bs4",
    "cytoolz",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
skip-string-normalization = true
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.poetry.scripts]
format = "scripts.format:main"
scrape-journal = "philoch_bib_enhancer.cli.scrape_journal_cli:cli"
fuzzy-matcher = "philoch_bib_enhancer.cli.fuzzy_matcher_cli:cli"